Actually fix issue where long labels in Tabs would get cut off

--- a/packages/components/src/Tabs/Tabs.css
+++ b/packages/components/src/Tabs/Tabs.css
@@ -54,7 +54,7 @@ ul.tabRow {
   display: flex;
   position: relative;
   list-style: none;
-  flex: 1 0 auto;
+  flex: 0 0 fit-content;
 }
 
 .tab {
